pt 2 of editing ITileEntityPilotable... omaga